# ryanair_timecapsule

./: .gitignore  README.md  format.sh  pyproject.toml  requirements.txt  setup.py
scripts/: download_booking.py  download_fares_data.py  download_ryanair.py
src/ryanair_timecapsule/api/: booking.py  constants.py  fare_finder.py  utils.py
test/ryanair_timecapsule/api/: test_booking.py  test_fare_finder.py  test_utils.py
